@@ -30,7 +30,6 @@ import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
 import java.util.Base64;
 import java.util.Date;
-import javax.xml.bind.DatatypeConverter;
 import org.apache.commons.lang3.StringUtils;
 import org.bouncycastle.asn1.x500.X500Name;
 import org.bouncycastle.asn1.x509.SubjectPublicKeyInfo;
@@ -267,17 +266,12 @@ public class ODLKeyTool {
                 final PKCS10CertificationRequestBuilder csrb = new PKCS10CertificationRequestBuilder(xName,
                         subPubKeyInfo);
                 final ContentSigner contSigner = new JcaContentSignerBuilder(signAlg).build(privKey);
-                final String certReq = DatatypeConverter.printBase64Binary(csrb.build(contSigner).getEncoded());
-                if (withTag) {
-                    final StringBuilder sb = new StringBuilder();
-                    sb.append(KeyStoreConstant.BEGIN_CERTIFICATE_REQUEST);
-                    sb.append("\n");
-                    sb.append(certReq);
-                    sb.append("\n");
-                    sb.append(KeyStoreConstant.END_CERTIFICATE_REQUEST);
-                    return sb.toString();
-                }
-                return certReq;
+                final String certReq = Base64.getEncoder().encodeToString(csrb.build(contSigner).getEncoded());
+                return !withTag ? certReq : new StringBuilder()
+                    .append(KeyStoreConstant.BEGIN_CERTIFICATE_REQUEST).append('\n')
+                    .append(certReq).append('\n')
+                    .append(KeyStoreConstant.END_CERTIFICATE_REQUEST)
+                    .toString();
             }
             LOG.info("KeyStore does not contain alias {}", keyAlias);
             return StringUtils.EMPTY;
@@ -303,17 +297,12 @@ public class ODLKeyTool {
         try {
             if (keyStore.containsAlias(certAlias)) {
                 final X509Certificate odlCert = (X509Certificate) keyStore.getCertificate(certAlias);
-                final String cert = DatatypeConverter.printBase64Binary(odlCert.getEncoded());
-                if (withTag) {
-                    final StringBuilder sb = new StringBuilder();
-                    sb.append(KeyStoreConstant.BEGIN_CERTIFICATE);
-                    sb.append("\n");
-                    sb.append(cert);
-                    sb.append("\n");
-                    sb.append(KeyStoreConstant.END_CERTIFICATE);
-                    return sb.toString();
-                }
-                return cert;
+                final String cert = Base64.getEncoder().encodeToString(odlCert.getEncoded());
+                return !withTag ? cert : new StringBuilder()
+                    .append(KeyStoreConstant.BEGIN_CERTIFICATE).append('\n')
+                    .append(cert).append('\n')
+                    .append(KeyStoreConstant.END_CERTIFICATE)
+                    .toString();
             }
             LOG.info("KeyStore does not contain alias {}", certAlias);
             return StringUtils.EMPTY;
